# fastapi_simple_oauth2

./: Makefile  README.md  example.py  pyproject.toml  update_version.sh
.github/workflows/: release.yml
fastapi_simple_oauth2/: __init__.py  pkce.py  typing.py
fastapi_simple_oauth2/tests/: test_oauth.py
